@@ -15,6 +15,7 @@ BUGFIX:
 * type=address | bugfix for 'filter=(reflocation is DGNAME)' if multiple reflocation are used
 * class RULE.php method load_common_from_domxml() | bugfix to NOT set reference for group-tag - fix problems with tag-merger
 * class SecurityRule | bugfix for qos -> marking
+* type=playbook | bugfix for new php version - missing variable declaration
 
 GENERAL
 * update js and json file for bash_completion
